--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -31,11 +31,12 @@
     "dotenv": "^8.2.0",
     "ethers": "^4.0.43",
     "graphql": "^14.6.0",
+    "ipfs-http-client": "^44.3.0",
     "qrcode.react": "^1.0.0",
-    "react-qr-reader": "^2.2.1",
     "react": "16.12.0",
     "react-blockies": "^1.4.1",
     "react-dom": "16.12.0",
+    "react-qr-reader": "^2.2.1",
     "react-scripts": "^3.3.1",
     "web3modal": "^1.5.0"
   },
