--- a/packages/react-app/public/manifest.json
+++ b/packages/react-app/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "Eth App",
   "name": "Create Eth App Sample",
+  "start_url": ".",
   "icons": [
     {
       "src": "favicon.ico",
