--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@elastic/datemath": "^5.0.3",
     "@elastic/eui": "^34.1.0",
     "@ramp-network/ramp-instant-sdk": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
