--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@uniswap-v1-app/contracts",
   "version": "1.0.0",
-  "main": "./src/index.js"
+  "main": "./src/index.js",
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.1.0"
+  }
 }
