--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -40,7 +40,10 @@
     "react-blockies": "^1.4.1",
     "react-dom": "16.12.0",
     "react-qr-reader": "^2.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.1",
+    "styled-components": "^5.3.0",
     "web3modal": "^1.5.0"
   },
   "devDependencies": {
