--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -18,6 +18,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@elastic/datemath": "^5.0.3",
     "@elastic/eui": "^34.1.0",
+    "@ethersproject/contracts": "^5.2.0",
     "@ramp-network/ramp-instant-sdk": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
