--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "./src/index.js",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.1.0"
+    "@openzeppelin/contracts": "^4.1.0",
+    "openzeppelin-contracts": "^4.0.0"
   }
 }
